// Autogenerated with StateSmith 0.22.2+0c32be37bf4d4fee5499780a5ef37a7996c192f9.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

/*
 * Generated from v_model/05_mbd_state_machine/statesmith_model/FailoverSupervisor.plantuml.
 * Do not edit generated files manually. Update the model and regenerate.
 */

#pragma once  // You can also specify normal include guard. See https://github.com/StateSmith/StateSmith/blob/main/docs/settings.md
#include <stdint.h>
#include <stdbool.h>
#include <stdint.h>


typedef enum FailoverSupervisor_EventId
{
    FailoverSupervisor_EventId_EV_BACKUP_ACTIVATION_TIMEOUT = 0,
    FailoverSupervisor_EventId_EV_BACKUP_ACTIVE_ACK = 1,
    FailoverSupervisor_EventId_EV_CRITICAL_FAULT = 2,
    FailoverSupervisor_EventId_EV_FAULT_CONFIRMATION_REACHED = 3,
    FailoverSupervisor_EventId_EV_INIT_DONE = 4,
    FailoverSupervisor_EventId_EV_MANUAL_FAILBACK_APPROVED = 5,
    FailoverSupervisor_EventId_EV_PRIMARY_HEARTBEAT_OK = 6,
    FailoverSupervisor_EventId_EV_PRIMARY_HEARTBEAT_TIMEOUT = 7,
    FailoverSupervisor_EventId_EV_PRIMARY_RECOVERY_DETECTED = 8
} FailoverSupervisor_EventId;

#define FailoverSupervisor_EventIdCount (9)

typedef enum FailoverSupervisor_StateId
{
    FailoverSupervisor_StateId_ROOT = 0,
    FailoverSupervisor_StateId_DEGRADED = 1,
    FailoverSupervisor_StateId_FAILOVER_IN_PROGRESS = 2,
    FailoverSupervisor_StateId_INIT = 3,
    FailoverSupervisor_StateId_NORMAL = 4,
    FailoverSupervisor_StateId_PRIMARY_FAULT_CANDIDATE = 5,
    FailoverSupervisor_StateId_RECOVERY_DETECTED = 6,
    FailoverSupervisor_StateId_SAFE = 7
} FailoverSupervisor_StateId;

#define FailoverSupervisor_StateIdCount (8)

// Subtree meta data generation can be disabled in settings.
// Details: https://github.com/StateSmith/StateSmith/issues/538
#define FailoverSupervisor_ROOT_SubtreeEndId (7)  // State 'FailoverSupervisor' subtree extends from itself (id: 0) to state 'SAFE' (id: 7)
#define FailoverSupervisor_DEGRADED_SubtreeEndId (1)  // State 'DEGRADED' subtree extends from itself (id: 1) to state 'DEGRADED' (id: 1)
#define FailoverSupervisor_FAILOVER_IN_PROGRESS_SubtreeEndId (2)  // State 'FAILOVER_IN_PROGRESS' subtree extends from itself (id: 2) to state 'FAILOVER_IN_PROGRESS' (id: 2)
#define FailoverSupervisor_INIT_SubtreeEndId (3)  // State 'INIT' subtree extends from itself (id: 3) to state 'INIT' (id: 3)
#define FailoverSupervisor_NORMAL_SubtreeEndId (4)  // State 'NORMAL' subtree extends from itself (id: 4) to state 'NORMAL' (id: 4)
#define FailoverSupervisor_PRIMARY_FAULT_CANDIDATE_SubtreeEndId (5)  // State 'PRIMARY_FAULT_CANDIDATE' subtree extends from itself (id: 5) to state 'PRIMARY_FAULT_CANDIDATE' (id: 5)
#define FailoverSupervisor_RECOVERY_DETECTED_SubtreeEndId (6)  // State 'RECOVERY_DETECTED' subtree extends from itself (id: 6) to state 'RECOVERY_DETECTED' (id: 6)
#define FailoverSupervisor_SAFE_SubtreeEndId (7)  // State 'SAFE' subtree extends from itself (id: 7) to state 'SAFE' (id: 7)


// Generated state machine
// forward declaration
typedef struct FailoverSupervisor FailoverSupervisor;

// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void FailoverSupervisor_ctor(FailoverSupervisor* sm);

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void FailoverSupervisor_start(FailoverSupervisor* sm);

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void FailoverSupervisor_dispatch_event(FailoverSupervisor* sm, FailoverSupervisor_EventId event_id);

// Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
char const * FailoverSupervisor_state_id_to_string(FailoverSupervisor_StateId id);

// Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
char const * FailoverSupervisor_event_id_to_string(FailoverSupervisor_EventId id);

// Returns the parent state for a given state. Returns ROOT if input has no parent.
// Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
FailoverSupervisor_StateId FailoverSupervisor_get_parent_id(FailoverSupervisor_StateId id);

// Generated state machine
struct FailoverSupervisor
{
    // Used internally by state machine. Feel free to inspect, but don't modify.
    FailoverSupervisor_StateId state_id;
};

